# ci_nacos

./: Cargo.toml
src/: git_pull.rs  git_status.rs  main.rs
