[package]
name = "ci_nacos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15"
clap = { version = "3.2.22", features = ["derive"] }
log = "0.4.16"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["time","local-time"] }
time = { version = "0.3.9", features = ["formatting"] }
exitcode = "1.1.2"
walkdir = "2.3.2"

serde_yaml = "0.9.13"